--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -14,7 +15,6 @@
   </head>
   <body>
     <!-- You can put your HTML here -->
-    Welcome to the HTML skeleton. You can put your HTML in here. Be sure to view
-    source!
+  Enrique is the cutest chihuahua in the world
   </body>
 </html>
