--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <body>
     <!-- You can put your HTML here -->
   Enrique is the cutest chihuahua in the world
-    <img src= https://freight.cargo.site/m/J1588317773420651783722646103575/IMG_5699.heic.
+    <img src= https://freight.cargo.site/t/original/i/X1789216643656878083879167321623/Heic-to-JPEG-conversion.jpg alt="cute chihuahuha">
   </body>
 </html>
