--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <style>
       /* You can put any CSS styles here */
       img {
-        max-width: 100%;
-      }
+        max-width: 100%; <h1 style="font-size:300%;">This is a heading</h1>      }
     </style>
   </head>
   <body>
     <!-- You can put your HTML here -->
-  Enrique is the cutest chihuahua in the world
+  <h1>Enrique is the cutest chihuahua in the world</h1>
     <br>
   </br>
     <img src="https://freight.cargo.site/t/original/i/X1789216643656878083879167321623/Heic-to-JPEG-conversion.jpg" alt="cute chihuahuha" width="670" height="1490">
