--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
   <head>
-    <title>HTML Skeleton</title>
+    <title>Eli's homepage</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <style>
