--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <!-- You can put your HTML here -->
-  <h1 align="centre">Enrique is the cutest chihuahua in the world 🐕</h1>
+  <h1 align="center">Enrique is the cutest chihuahua in the world 🐕</h1>
     <br>
   </br>
-    <img src="https://freight.cargo.site/t/original/i/X1789216643656878083879167321623/Heic-to-JPEG-conversion.jpg" alt="cute chihuahuha" align="centre" width="670" height="1490">
+    <img src="https://freight.cargo.site/t/original/i/X1789216643656878083879167321623/Heic-to-JPEG-conversion.jpg" alt="cute chihuahuha" align="center" width="670" height="1490">
   </body>
 </html>
