--- a/index.html
+++ b/index.html
@@ -1,22 +1,82 @@
-
 <!DOCTYPE html>
 
 <html>
   <head>
-    <title>Eli's homepage</title>
+    <title>Profile</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <style>
-      /* You can put any CSS styles here */
+      body {
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        margin: 0;
+      }
+      main {
+        padding: 150px;
+      }
       img {
-        max-width: 100%; <h1 style="font-size:300%;">This is a heading</h1>      }
+        max-width: 100%;
+        width: 100px;
+      }
+      footer {
+        font-size: 10px;
+        margin: 5em auto;
+      }
+      img.profile {
+        height: 300px;
+        width: 300px;
+      }
+      img.item {
+        height: 100px;
+        width: auto;
+      }
     </style>
   </head>
   <body>
-    <!-- You can put your HTML here -->
-  <h1 align="center">Enrique is the cutest chihuahua in the world 🐕</h1>
-    <br>
-  </br>
-    <img src="https://freight.cargo.site/t/original/i/X1789216643656878083879167321623/Heic-to-JPEG-conversion.jpg" alt="cute chihuahuha" align="center" width="670" height="1490">
+    <!-- This page has been inspired by https://tosic.com -->
+    <main>
+      <img
+        src="images/energy.png"
+        class="profile"
+        alt="a light green and yellow glowing sphere"
+      />
+
+      <br /><br /><br />
+
+      <b>Favorite Fruit</b><br />
+      🍓 (there is no raspberry emoji 😠)
+
+      <br /><br />
+
+      <b>Four Things in My Bag</b><br />
+      <img
+        src="images/enriquechihuahua.jpg"
+        class="item"
+        alt="crop of enrique the chihuahua's face"
+      />
+      <img
+        src="images/sparklingwater.jpeg"
+        class="item"
+        alt="photo of a bottle of sparkling water"
+      />
+      <img src="images/lrollingtobacco.webp" class="item" alt="packet of rolling tobacco" />
+
+        <img
+          src="images/glasses.jpeg"
+          class="item"
+          alt="photo of a pair of black glasses"
+        />
+      </a>
+
+      <br /><br />
+
+      <b>My Personal “Prof. Dr. Style” of 2024</b>
+
+      1 — make enrique famous on the web<br />
+      2 — improve people's opinion of chihuahuas<br />
+      3 — pave the way for chiahuahua hostile takeover
+
+      <br /><br />
+    </main>
   </body>
 </html>
