--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <!-- This page has been inspired by https://tosic.com -->
     <main>
       <img
-        src="images/energy.png"
+        src="https://freight.cargo.site/t/original/i/F1789255985599813150524894864919/enriquechihuahua.jpg"
         class="profile"
-        alt="a light green and yellow glowing sphere"
+        alt="photo of a chihuahua"
       />
 
       <br /><br /><br />
@@ -48,21 +48,16 @@
 
       <br /><br />
 
-      <b>Four Things in My Bag</b><br />
+      <b>Three Things in My Bag</b><br />
       <img
-        src="images/enriquechihuahua.jpg"
-        class="item"
-        alt="crop of enrique the chihuahua's face"
-      />
-      <img
-        src="images/sparklingwater.jpeg"
+        src="https://freight.cargo.site/t/original/i/F1789255985599813150524894864919/enriquechihuahua.jpg"
         class="item"
         alt="photo of a bottle of sparkling water"
       />
-      <img src="images/lrollingtobacco.webp" class="item" alt="packet of rolling tobacco" />
+      <img src="https://freight.cargo.site/t/original/i/S1789257251175583815516102583831/rollingtobacco.jpg" class="item" alt="packet of rolling tobacco" />
 
         <img
-          src="images/glasses.jpeg"
+          src="https://freight.cargo.site/t/original/i/K1789255985655153382746023519767/glasses.jpeg"
           class="item"
           alt="photo of a pair of black glasses"
         />
@@ -71,7 +66,7 @@
       <br /><br />
 
       <b>My Personal “Prof. Dr. Style” of 2024</b>
-
+<br>
       1 — make enrique famous on the web<br />
       2 — improve people's opinion of chihuahuas<br />
       3 — pave the way for chiahuahua hostile takeover
