--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Profile</title>
+    <title>Eli's Profile</title>
     <meta charset="utf-8" />
     <style>
       body {
