--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <b>Three Things in My Bag</b><br />
       <img
-        src="https://freight.cargo.site/t/original/i/F1789255985599813150524894864919/enriquechihuahua.jpg"
+        src="https://freight.cargo.site/t/original/i/Y1789255985673600126819733071383/sparklingwater.jpeg"
         class="item"
         alt="photo of a bottle of sparkling water"
       />
