--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <br /><br />
 
-      <b>My Personal “Prof. Dr. Style” of 2024</b>
+      <b>My Personal Manifesto</b>
 <br>
       1 — make enrique famous on the web<br />
       2 — improve people's opinion of chihuahuas<br />
