--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <br>
       1 — make enrique famous on the web<br />
       2 — improve people's opinion of chihuahuas<br />
-      3 — pave the way for chiahuahua hostile takeover
+      3 — pave the way for chihuahua hostile takeover
 
       <br /><br />
     </main>
